# Vision

./: .gitignore  LICENSE  README.en.md  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
app/: build.gradle
app/src/androidTest/java/t20220049/sw_vision/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/t20220049/sw_vision/: CameraService.java  CollectMatch.java  CollectionTerminal.java  Connection.java  ControlMatch.java  ControlVideo.java  Device.java  FFmpegCommandFactory.java  HomePage.java  MainActivity.java  MyApplication.java  SearchActivity.java  Video.java  VideoFragment.java  VideoTestView.java
app/src/main/java/t20220049/sw_vision/adapter/: DeviceAdapter.java
app/src/main/java/t20220049/sw_vision/app/: AnimationListener.java  AppMaster.java  IApp.java
app/src/main/java/t20220049/sw_vision/arm_controller/: BluetoothActivity.java  ControlCenter.java
app/src/main/java/t20220049/sw_vision/bean/: Device.java  MediaType.java  MemberBean.java  MyIceServer.java
app/src/main/java/t20220049/sw_vision/broadcast/: DirectBroadcastReceiver.java
app/src/main/java/t20220049/sw_vision/callback/: DirectActionListener.java
app/src/main/java/t20220049/sw_vision/common/: Constants.java
app/src/main/java/t20220049/sw_vision/entrance/: NodejsActivity.java  WebrtcUtil.java
app/src/main/java/t20220049/sw_vision/map/: p2pIPtowebRTC.java
app/src/main/java/t20220049/sw_vision/model/: FileTransfer.java
app/src/main/java/t20220049/sw_vision/nodejs/: NodejsActivity.java  WebrtcUtil.java
app/src/main/java/t20220049/sw_vision/service/: CameraService.java  WifiServerService.java
app/src/main/java/t20220049/sw_vision/task/: WifiClientTask.java
app/src/main/java/t20220049/sw_vision/transfer/: MyApplication.java  SearchActivity.java
app/src/main/java/t20220049/sw_vision/ui/: BaseActivity.java  CVActivity.java  ChatRoomActivity.java  ChatRoomFragment.java  ChatSingleActivity.java  CollectActivity.java  CollectMatch.java  ControlActivity.java  ControlConnect.java  ControlFragment.java  ControlMatch.java  ControlVideo.java  DetectCapturer.java  DetectSink.java  HomePage.java  OverlayView.java  ReceiveFileActivity.java  SendFileActivity.java  TestCapturer.java  TrackerCameraFragment.java  TrackingActivity.java  TrackingCapturer.java  WebrtcFragment.java
app/src/main/java/t20220049/sw_vision/ui_utils/: LoadingDialog.java  MyNotification.java  TimeShow.java
app/src/main/java/t20220049/sw_vision/util/: Md5Util.java  WifiP2pUtils.java
app/src/main/java/t20220049/sw_vision/utils/: CameraService.java  DBHelper.java  DBUtils.java  FFmpegCommandFactory.java  JointBitmap.java  JointBitmapView.java  MyLog.java  Pano.java  Panorama.java  PermissionUtil.java  ReceiveWatchUtils.java  RecordUtil.java  ResUtil.java  TimerManager.java  TransferUtil.java  Utils.java  VideoFragment.java  VideoFragmentManager.java  VideoHandleManager.java  WatchUtils.java
app/src/main/java/t20220049/sw_vision/view/: CircleImageView.java  IntegrationView.java  PhotoView.java  (+5 more)
app/src/main/res/anim/: anim_the_heartbeat.xml  anim_the_heartbeatsmall.xml  player_double_click_animation.xml
app/src/main/res/drawable/: delete_btn_selector.xml  ic_caiji.xml  ic_caijizhong.xml  ic_caijizhunbei.xml  ic_client.xml  ic_collect.xml  ic_control.xml  ic_end_call.xml  ic_flip_camera.xml  ic_left.xml  ic_play.xml  ic_record_button.xml  ic_server.xml  ic_shoot.xml  ic_vision_watch.xml  ic_waittext.xml  ic_welcome.xml  set_btn.xml  square_btn.xml
app/src/main/res/layout/: acticity_control.xml  acticity_video.xml  activity_collect.xml  activity_collect_match.xml  activity_collection_terminal.xml  activity_connection.xml  activity_control_match.xml  activity_cvactivity.xml  activity_home_page.xml  activity_homepage.xml  activity_lsc6.xml  activity_nodejs.xml  activity_panorama.xml  activity_receive_file.xml  activity_search.xml  activity_send_file.xml  activity_tracking.xml  activity_video_view.xml  content_nodejs.xml  device_list.xml  fragment_tracker_camera.xml  fragment_webrtc.xml  item_search_device.xml  layout_bottom_sheet.xml  layout_dialog.xml  layout_dialog_prompot.xml  pattern_menu.xml  view_comment_circleimageview.xml  wr_activity_chat_single.xml
app/src/main/res/values/: attr.xml  attrs_circleimageview.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/t20220049/sw_vision/: ExampleUnitTest.java
doc/: Vision详细设计文档.docx  Vision项目使用手册.docx
gradle/wrapper/: gradle-wrapper.properties
key/: settings.txt  t20220049
libwebrtc/: build.gradle
opencv/: build.gradle
opencv/java/src/org/opencv/android/: CameraBridgeViewBase.java
opencv/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
opencv/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
(+59 files in other folders)
